--- a/index.html
+++ b/index.html
@@ -1,71 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>CloudInDigital — Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="CloudInDigital - Driving innovation through technology and creativity." />
+  <title>CloudInDigital | Innovation for the Future</title>
+  <link rel="icon" href="img/favicon.png" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand">
-        <a href="index.html">CloudInDigital</a>
-      </div>
-      <nav class="main-nav" id="mainNav">
-        <a href="index.html">Home</a>
-        <a href="press.html">Press Releases</a>
-        <a href="statement.html">Statement</a>
-        <a href="contact.html">Contact</a>
+  <header class="navbar">
+    <div class="container">
+      <img src="img/logo.png" alt="CloudInDigital" class="logo" />
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="press.html">News</a></li>
+          <li><a href="statement.html">Statement</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
-      <button class="nav-toggle" aria-label="Toggle navigation" onclick="document.getElementById('mainNav').classList.toggle('open')">☰</button>
     </div>
   </header>
 
-  <main>
-    <section class="hero">
-      <img src="img/hero-bg.svg" alt="Innovation background" class="hero-bg" />
-      <div class="hero-content container">
-        <h1>CloudInDigital</h1>
-        <p class="lead">Driving digital innovation and collaboration. News, statements and media contacts from our network.</p>
-        <p><a class="btn" href="press.html">Latest Press Releases</a></p>
-      </div>
-    </section>
-
-    <section class="intro container">
-      <h2>About CloudInDigital</h2>
-      <p>CloudInDigital is an independent platform promoting digital innovation, research and collaboration across the tech ecosystem. We publish statements, proposals and press releases relevant to cloud technologies and digital transformation.</p>
-    </section>
-
-    <section class="news container">
-      <h2>Recent Press Releases</h2>
-      <div class="cards">
-        <article class="card">
-          <h3><a href="press.html#r1">Urgent Proposal for Supporting the Dissolution of an Internet Registry</a></h3>
-          <p class="meta">Oct 4, 2025</p>
-          <p>We outline a proposal addressing governance concerns and suggest measured steps for stakeholders. <a href="press.html#r1">Read more →</a></p>
-        </article>
-
-        <article class="card">
-          <h3><a href="press.html#r2">Statement on Responsible Cloud Practices</a></h3>
-          <p class="meta">Sep 20, 2025</p>
-          <p>Recommendations for transparency and accountability in cloud operations. <a href="press.html#r2">Read more →</a></p>
-        </article>
-
-        <article class="card">
-          <h3><a href="press.html#r3">Cloud Innovation Fellowship Launch</a></h3>
-          <p class="meta">Aug 12, 2025</p>
-          <p>Announcing a fellowship to support early-stage digital innovators. <a href="press.html#r3">Read more →</a></p>
-        </article>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 CloudInDigital. All rights reserved.</p>
+  <section class="hero">
+    <div class="hero-content">
+      <h1 class="fade-in">CloudInDigital</h1>
+      <p class="slide-up">Driving Innovation and Digital Transformation</p>
+      <a href="press.html" class="btn">Read News</a>
     </div>
+  </section>
+
+  <footer>
+    <p>© 2025 CloudInDigital. All Rights Reserved.</p>
   </footer>
 
   <script src="js/script.js"></script>
