--- a/statement.html
+++ b/statement.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Statement — CloudInDigital</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Statement | CloudInDigital</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand"><a href="index.html">CloudInDigital</a></div>
-      <nav class="main-nav" id="mainNav">
-        <a href="index.html">Home</a>
-        <a href="press.html">Press Releases</a>
-        <a href="statement.html">Statement</a>
-        <a href="contact.html">Contact</a>
+  <header class="navbar">
+    <div class="container">
+      <img src="img/logo.png" alt="CloudInDigital" class="logo" />
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="press.html">News</a></li>
+          <li><a class="active" href="statement.html">Statement</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
-      <button class="nav-toggle" aria-label="Toggle navigation" onclick="document.getElementById('mainNav').classList.toggle('open')">☰</button>
     </div>
   </header>
 
-  <main class="container content">
-    <h1>Statement on Digital Responsibility</h1>
-    <p class="meta">Sep 1, 2025</p>
-    <p>CloudInDigital believes that the digital transformation must be guided by principles of transparency, inclusivity and accountability. We call on industry and policymakers to collaborate on standards that protect users and enable innovation.</p>
-    <p>Further sections could include more detailed recommendations, stakeholder lists, and supporting evidence.</p>
-  </main>
+  <section class="page-header">
+    <h1>Official Statement</h1>
+  </section>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 CloudInDigital. All rights reserved.</p>
+  <section class="content">
+    <div class="container fade-in">
+      <p>At CloudInDigital, we are committed to advancing innovation, transparency, and trust in the digital ecosystem. Our mission is to empower businesses and individuals with secure, scalable, and intelligent technology solutions.</p>
+      <p>We believe that innovation drives progress — and progress must be accessible to everyone.</p>
     </div>
+  </section>
+
+  <footer>
+    <p>© 2025 CloudInDigital. All Rights Reserved.</p>
   </footer>
+
   <script src="js/script.js"></script>
 </body>
 </html>
