--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="navbar">
     <div class="container">
-      <img src="img/logo.png" alt="CloudInDigital" class="logo" />
+      <img src="https://github.com/phuonggia010699/test-web-/blob/main/logo.png" alt="CloudInDigital" class="logo" />
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
